# workstation

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
crates/ws-cleanup/: Cargo.toml
crates/ws-cleanup/src/: scan.rs
crates/ws-cli/: Cargo.toml
crates/ws-cli/src/: main.rs
crates/ws-cli/src/commands/: apply.rs  diff.rs  mod.rs  profiles.rs
crates/ws-core/: Cargo.toml
crates/ws-core/src/: command.rs  context.rs  error.rs  executor.rs  graph.rs  lib.rs  resource.rs  scope.rs  testing.rs
crates/ws-dsl/: Cargo.toml
crates/ws-dsl/src/: builder.rs  lib.rs
crates/wsctl-core/: Cargo.toml
crates/wsctl-core/src/: graph.rs  lib.rs  resource.rs  testing.rs
examples/my-workstation/: Cargo.toml
examples/my-workstation/src/: lib.rs
macos/: Cargo.toml
macos/src/: lib.rs
macos/tests/: installation.rs
src/: builder.rs  config.rs  main.rs  tui.rs
src/commands/: apply.rs  audit.rs  diff.rs  mod.rs  profiles.rs
tests/: installation.rs
