[workspace]
resolver = "2"

members = [
    "crates/ws-core",
    "crates/ws-dsl",
    "crates/ws-cli",
    "crates/ws-cleanup",
    "macos",
    "examples/my-workstation",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["pj"]

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"

# Internal crates
ws-core = { path = "crates/ws-core" }
ws-dsl = { path = "crates/ws-dsl" }
ws-macos = { path = "macos" }
