[workspace]
resolver = "2"

members = [
    "crates/wsctl-core",
    "macos",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["pj"]

[workspace.dependencies]
# Core
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dirs = "5.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
console = "0.15"
indicatif = "0.17"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Internal crates
ws-macos = { path = "macos" }
wsctl-core = { path = "crates/wsctl-core" }

[package]
name = "wsctl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Workstation controller — manage macOS setup declaratively"

[[bin]]
name = "wsctl"
path = "src/main.rs"

[dependencies]
wsctl-core.workspace = true
ws-macos.workspace = true
anyhow.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
