[package]
name = "ws-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "macOS-specific resources for ws - Homebrew, defaults, launchd"

[dependencies]
ws-core = { path = "../crates/ws-core" }
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
ws-dsl = { path = "../crates/ws-dsl" }
