[package]
name = "ws-macos"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "macOS-specific resources for ws - Homebrew, defaults, launchd"

[dependencies]
wsctl-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
