[package]
name = "ws-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI for ws - declarative workstation configuration"

[[bin]]
name = "ws"
path = "src/main.rs"

[dependencies]
ws-core = { path = "../ws-core" }
ws-dsl = { path = "../ws-dsl" }
ws-macos = { path = "../../macos" }
anyhow.workspace = true
clap.workspace = true
console.workspace = true
indicatif.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
