[package]
name = "ws-dsl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "DSL and builder API for ws - declarative workstation configuration"

[dependencies]
ws-core = { path = "../ws-core" }
ws-macos = { path = "../../macos" }
anyhow.workspace = true
